--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,4 +11,4 @@ jobs:
       - uses: actions/checkout@v2
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - run: docker build -t mithesh109/docker-react -f Dockerfile.dev .
-      - run: docker run -e CI=true mithesh109/docker-react npm test
+      - run: docker run -e CI=true mithesh109/docker-react npm run test
